--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="row about">
                 <div class="col-6 mycol text-center">
                     <strong>Say Hello to ToyStore!</strong>
-                    <h2>Free Ecommerce <br> Template for Webflow</h2>
+                    <h2>Fre Ecommerce <br> Template for Webflow</h2>
                     <a href="#">Open Catalog</a>
                 </div>
             </div>
